# sysmenu-applet

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
debian/: changelog  control
po/: POTFILES.in
sysmenu/: Makefile.am  Preferences.directory  System-Settings.directory  gnome-preferences.menu  gnome-settings.menu  launch.c  launch.h  menu.c  menu.h  org.gnome.panel.applet.SysMenuApplet.panel-applet.in.in  org.gnome.panel.applet.SysMenuAppletFactory.service.in  sysmenu.c  sysmenu.h  util.c  util.h
