AC_INIT(sysmenu-applet, 1.0.0)
AC_PREREQ(2.59)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([1.9 tar-ustar])
AC_CONFIG_MACRO_DIR(m4)

LIBPANEL_REQUIRED=2.91.90
LIBGNOME_MENU_REQUIRED=3.1.4

AM_MAINTAINER_MODE

IT_PROG_INTLTOOL([0.35.0])
PKG_PROG_PKG_CONFIG([0.19])

AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(SYSMENU_APPLET, libpanelapplet-4.0 >= $LIBPANEL_REQUIRED libgnome-menu-3.0 >= $LIBGNOME_MENU_REQUIRED)
AC_SUBST(SYSMENU_APPLET_CFLAGS)
AC_SUBST(SYSMENU_APPLET_LIBS)

GETTEXT_PACKAGE=sysmenu-applet
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext Package])
AC_DEFINE_DIR(GNOMELOCALEDIR, "${datadir}/locale", [locale directory])
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([Makefile po/Makefile.in sysmenu/Makefile])
